<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.telematyka.elderfinder.MainActivity">
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <Button
        android:text="@string/add_member"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:id="@+id/add_member"
        android:onClick="addMember" />
    <Button
        android:text="@string/check_position"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:id="@+id/last_location"
        android:onClick="checkLastPositions" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:srcCompat="@drawable/bald"
        android:id="@+id/imageView2" />
    <Button
        android:text="@string/properties"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:id="@+id/properties"/>
    <Button
        android:text="@string/master"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:id="@+id/startService"
        android:onClick="startService" />



</LinearLayout>
</RelativeLayout>
