<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_slave_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.telematyka.elderfinder.SlaveProfileActivity"
    android:orientation="vertical"
    android:weightSum="1">

        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:columnCount="2">

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/masterNameSurnameLabel"
            android:layout_width="200dp" />
        <TextView
            android:id="@+id/masterNameText"
            android:layout_height="50dp"
            android:text="Name:"
            android:layout_width="match_parent"
            tools:fontFamily="monospace"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"/>




        <TextView
            android:layout_height="wrap_content"
            android:text="@string/slaveNameSurnameLabel"
            android:layout_width="match_parent"/>
        <TextView
            android:id="@+id/nameSurname"
            android:layout_height="50dp"
            android:text="Name:"
            android:layout_width="match_parent"
            tools:fontFamily="monospace"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp" />



        <TextView
            android:layout_height="wrap_content"
            android:text="@string/dateOfBirthLabel"
            android:layout_width="match_parent" />
        <TextView
            android:id="@+id/birth_date"
            android:layout_height="50dp"
            android:text="Name:"
            android:layout_width="match_parent"
            tools:fontFamily="monospace"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/prompt_telephoneNumber"
            android:layout_width="250dp"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/telephoneNumber"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="Name:"
            android:layout_column="0"
            tools:fontFamily="monospace"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"/>
        <ImageButton
            android:onClick="callMaster"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:id="@+id/phone_button"
            android:src="@drawable/ic_action_name"
            android:visibility="visible"
            android:layout_column="1"
            android:layout_gravity="center"
            android:elevation="5dp" />
    </GridLayout>


</LinearLayout>
